--- a/public/css/all.css
+++ b/public/css/all.css
@@ -7,15 +7,25 @@ background-image: url('http://1.bp.blogspot.com/-PC_5JXttmZM/UB7Cf7fK7-I/AAAAAAA
 min-height: 100%;
 }
 
-h1 {
+.opaque{
 background: #eeeeee;
 opacity: 0.7;
-text-align: center;
 }
 
-span{
-font-size: large;
+h1 {
 text-align: center;
+width: 80%;
+margin-left: auto;
+margin-right: auto;
+}
+
+div{
+font-size: x-large;
+text-align: center;
+background-color: #00FF00;
+width: 80%;
+margin-left: auto;
+margin-right: auto;
 }
 
 
