--- a/public/css/all.css
+++ b/public/css/all.css
@@ -3,29 +3,24 @@
  */
 body{
 background-image: url('http://1.bp.blogspot.com/-PC_5JXttmZM/UB7Cf7fK7-I/AAAAAAAAG8o/qiu9c7U8FZA/s1600/PennePasta+%25287%2529.jpg');
-//background: linear-gradient(45deg, #f06, black);
 min-height: 100%;
 }
 
 .opaque{
 background: #eeeeee;
-opacity: 0.7;
+background-color:rgba(256, 256, 256, 0.7);
 }
 
-h1 {
+.btn{
 text-align: center;
-width: 80%;
-margin-left: auto;
-margin-right: auto;
 }
 
-div{
-font-size: x-large;
-text-align: center;
-background-color: #00FF00;
-width: 80%;
-margin-left: auto;
-margin-right: auto;
+.next{
+background-color:rgba(256, 0, 0, 0.7);
+}
+
+.add{
+background-color:rgba(0, 256, 0, 0.7);
 }
 
 
