--- a/public/css/all.css
+++ b/public/css/all.css
@@ -11,8 +11,17 @@ background: #eeeeee;
 background-color:rgba(256, 256, 256, 0.7);
 }
 
+.pad{
+  padding: 30px;
+}
+
 .btn{
 text-align: center;
+}
+
+.wide{
+  width: 100%;
+  margin-bottom: 25px;
 }
 
 .next{
